# ghostdriver

./: .gitignore  Cargo.toml  GHOSTDRIVER_INIT.md  LICENSE  README.md
.github/workflows/: ci.yml
configs/: milestone-0.toml
crates/ghost-analyze/: Cargo.toml
crates/ghost-analyze/src/: lib.rs
crates/ghost-core/: Cargo.toml
crates/ghost-core/src/: config.rs  environment.rs  hashing.rs  lib.rs  manifest.rs  process.rs  schema.rs
crates/ghost-core/tests/: schema_validation.rs
crates/ghostctl/: Cargo.toml
crates/ghostctl/src/: doctor.rs  experiment.rs  main.rs  probe.rs
docs/: ARCHITECTURE.md  EXPERIMENT-DESIGN.md  MILESTONE-0.md  ROADMAP.md  SAFETY.md
probes/cuda-vector-add/: CMakeLists.txt  README.md  build_fatbin.cmake  main.cpp  vector_add.cu
schemas/: environment.schema.json  experiment.schema.json  group.schema.json  hashes.schema.json  run.schema.json  summary.schema.json
scripts/: build_probe.sh  capture_group.sh
