[package]
name = "ghost-core"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "Shared data models and validation primitives for GhostDriver"

[dependencies]
chrono.workspace = true
serde.workspace = true
thiserror.workspace = true

[dev-dependencies]
jsonschema = { version = "0.33", default-features = false }
serde_json.workspace = true
