[package]
name = "ghostctl"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "Environment and experiment CLI for GhostDriver"

[dependencies]
anyhow = "1.0"
clap = { version = "4.5", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
