[package]
name = "ghostctl"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "Environment and experiment CLI for GhostDriver"

[dependencies]
anyhow = "1.0"
chrono.workspace = true
clap = { version = "4.5", features = ["derive"] }
ghost-core = { path = "../ghost-core" }
serde.workspace = true
serde_json = "1.0"
toml = "0.8"
